# CPProb

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  DockerfileCPP  DockerfilePY  LICENSE  README.md  build-docker.sh  cpprob.cpp
.build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
.build/src/: Makefile  cmake_install.cmake  main  models_main
.build/src/cpprob/: Makefile  cmake_install.cmake
.build/src/models/: Makefile  cmake_install.cmake
.build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
.build/tests/cpprob/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cpprob_tests
build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/flatbuffers-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build2/flatbuffers-download/flatbuffers-prefix/tmp/: flatbuffers-gitclone.cmake  flatbuffers-gitupdate.cmake
build2/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/googletest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build2/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
build2/hmm/: observes.obs  sis.post_ids
build2/src/: Makefile  cmake_install.cmake  main  models_main
build2/src/cpprob/: Makefile  cmake_install.cmake
build2/src/models/: Makefile  cmake_install.cmake
build2/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/tests/cpprob/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cpprob_tests
cmake/: BuildFlatBuffers.cmake  FindBoost.cmake  FindFlatBuffers.cmake  FindZeroMQ.cmake  ZeroMQ.cmake.in  boost.cmake.in  flatbuffers.cmake.in  gtest.cmake.in
dependencies/: CMakeLists.txt  install.sh
example/: mini_sherpa.obs
examples/models/: linear_gaussian_1d.obs  poly_adjustment.obs
examples/sherpa/: sherpa.obs
examples/sherpa_mini/: test0.obs  test1.obs  test2.obs  test3.obs
flatbuffers/: infcomp.fbs
include/: CMakeLists.txt  cpprob.hpp  interface_lua.cpp  models.hpp  trace.hpp  traits.hpp
include/cpprob/: any.hpp  call_function.hpp  cpprob.hpp  distribution_utils.hpp  metapriors.hpp  model.hpp  ndarray.hpp  sample.hpp  serialization.hpp  socket.hpp  state.hpp  trace.hpp  traits.hpp  utils.hpp
include/cpprob/detail/: vector_io.hpp
include/cpprob/distr/: min_max_discrete.hpp  vmf.hpp
include/cpprob/distributions/: abc.hpp  dirac_delta.hpp  distribution_utils.hpp  min_max_continuous.hpp  min_max_discrete.hpp  mixture.hpp  multivariate_normal.hpp  truncated.hpp  utils_abc.hpp  utils_base.hpp  utils_discrete.hpp  utils_distributions.hpp  utils_min_max_continuous.hpp  utils_min_max_discrete.hpp  utils_mixture.hpp  utils_multivariate_normal.hpp  utils_normal_distribution.hpp  utils_poisson.hpp  utils_truncated.hpp  utils_uniform_real.hpp  utils_uniform_smallint.hpp  vmf.hpp
include/cpprob/impl/: cpprob.hpp
include/cpprob/postprocess/: empirical_distribution.hpp  stats_printer.hpp
include/flatbuffers/: infcomp.fbs  infcomp_generated.h
include/models/: calorimeter.hpp  mod_prueba.hpp  models.hpp  poly_adjustment.hpp  sherpa.hpp  sherpa_mini.hpp
infcomp/: .gitignore  actions.py  client.py  data_structures.py  inference.py  logger.py  main.py  parse_flatbuffers.py  server.py  settings.py  socket_wrapper.py  train.py  traits.py  util.py
infcomp/distributions/: embeddings.py  prior_distributions.py  projections.py  proposal_distributions.py
infcomp/nn/: address.py  nn.py  observation.py  regularize.py
infcomp/protocol/: Beta.py  Gamma.py  Laplace.py  MultivariateNormal.py  Normal.py  Poisson.py  ProductDistribution.py  Sample.py  TableDistribution.py  Trace.py
posteriors/: resampling.post  test.post
src/: CMakeLists.txt  cpprob.cpp  cpprob.hpp  main.cpp  main_csis.cpp  models_main.cpp  prueba.cpp  sherpa_details.cpp  sherpa_details.hpp  test_main.cpp
src/cpprob/: CMakeLists.txt  cpprob.cpp  sample.cpp  serialization.cpp  socket.cpp  state.cpp  trace.cpp  traits.cpp  utils.cpp
src/infcomp/: .gitignore  actions.py  client.py  data_structures.py  inference.py  logger.py  main.py  parse_flatbuffers.py  server.py  settings.py  socket_wrapper.py  train.py  traits.py  util.py
src/infcomp/distributions/: embeddings.py  prior_distributions.py  projections.py  proposal_distributions.py
src/infcomp/models/: .gitignore
src/infcomp/nn/: address.py  nn.py  observation.py
src/infcomp/protocol/: Discrete.py  Flip.py  MessageBody.py  Mixture.py  MultivariateNormal.py  RequestStartInference.py  Trace.py  Truncated.py  UniformContinuous.py  UniformDiscrete.py
src/models/: CMakeLists.txt  calo_variance.cpp  calorimeter.cpp  gaussian.cpp  gaussian_unknown_mean.cpp  hmm.cpp  linear_gaussian_1d.cpp  main.cpp  mod_prueba.cpp  models.cpp  sherpa.cpp  sherpa_gen.cpp  sherpa_mini.cpp  sherpa_mini_gen.cpp  sherpa_statistics.cpp  variance_calo.cpp
src/postprocess/: main.py
src/postprocess/examples/hmm/: observation.data  truth.data
src/postprocess/examples/hmm_works/: csis.data  sis.data
src/postprocess/examples/unk_mean_rejection/: csis.data  csis_old.data  ids.data  sis.data
src/postprocess/examples/unk_mean_rejection_both/: csis.data  sis.data
src/postprocess/examples/unk_mean_rejection_old/: csis.data  truth.data
tests/: CMakeLists.txt
tests/cpprob/: CMakeLists.txt  logpdf.cpp  ndarray.cpp
